# hackathon-task-04

./: README.md
my-app/: package-lock.json  package.json
my-app/public/: index.html
my-app/src/: App.tsx  Contract.tsx  Storage.tsx  config.ts  index.tsx  inputStorage.tsx  react-app-env.d.ts  state.ts  useStorage.ts
my-contract/: Cargo.toml
my-contract/src/: lib.rs
