# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "my_contract"
version = "0.1.0"
edition = "2018"
license = "MPL-2.0"
authors = [ "ssghost <ssprof0@gmail.com>" ]
description = "my-contract"

[features]
default = ["std"]
std = ["concordium-std/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "6.0", default-features = false}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
opt-level = "s"
codegen-units = 1
